<resources>
    <string name="app_name">Calculadora</string>
    <string name="ac">AC</string>
    <string name="cero">0</string>
    <string name="suma">+</string>
    <string name="tres">3</string>
    <string name="dos">2</string>
    <string name="uno">1</string>
    <string name="menos">—</string>
    <string name="seis">6</string>
    <string name="cinxo">5</string>
    <string name="cuatro">4</string>
    <string name="multiplicar">x</string>
    <string name="nueve">9</string>
    <string name="ocho">8</string>
    <string name="siete">7</string>
    <string name="dividir">÷</string>
    <string name="prcnj">%</string>
    <string name="neg_pos">+/_</string>
    <string name="result">=</string>
    <string name="coma">,</string>
    <string name="dot">.</string>
</resources>